[gd_scene load_steps=17 format=3 uid="uid://bxad8qlrmri4o"]

[ext_resource type="Script" uid="uid://c8w2mk05lephi" path="res://Scripts/intro_scene.gd" id="1_ebiix"]
[ext_resource type="Texture2D" uid="uid://gsso7db7syk1" path="res://Sprites/wip_intro.png" id="2_pmwsw"]
[ext_resource type="Texture2D" uid="uid://dhxihn8o7bikj" path="res://Sprites/focus_on_bear.png" id="3_rf54f"]
[ext_resource type="Texture2D" uid="uid://jkpy40jul6g3" path="res://Sprites/focus_on_bunny.png" id="4_4qup3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j7a63"]
atlas = ExtResource("2_pmwsw")
region = Rect2(4000, 0, 1000, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0w1t"]
atlas = ExtResource("2_pmwsw")
region = Rect2(5000, 0, 1000, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_urpxv"]
atlas = ExtResource("2_pmwsw")
region = Rect2(6000, 0, 1000, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_3837i"]
atlas = ExtResource("2_pmwsw")
region = Rect2(7000, 0, 1000, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qgyd"]
atlas = ExtResource("3_rf54f")
region = Rect2(0, 0, 1000, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_var6q"]
atlas = ExtResource("4_4qup3")
region = Rect2(0, 0, 1000, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpq1n"]
atlas = ExtResource("2_pmwsw")
region = Rect2(0, 0, 1000, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf54f"]
atlas = ExtResource("2_pmwsw")
region = Rect2(1000, 0, 1000, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qup3"]
atlas = ExtResource("2_pmwsw")
region = Rect2(2000, 0, 1000, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2qc1"]
atlas = ExtResource("2_pmwsw")
region = Rect2(3000, 0, 1000, 600)

[sub_resource type="SpriteFrames" id="SpriteFrames_pmwsw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7a63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0w1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urpxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3837i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qgyd")
}],
"loop": false,
"name": &"intro_cutscene_bear",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7a63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0w1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urpxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3837i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_var6q")
}],
"loop": false,
"name": &"intro_cutscene_bunny",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpq1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf54f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qup3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2qc1")
}],
"loop": false,
"name": &"intro_cutscene_start",
"speed": 0.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rf54f"]
radius = 105.0
height = 330.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ebiix")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pmwsw")
animation = &"intro_cutscene_start"
autoplay = "intro_cutscene_start"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.152, 1.08)

[node name="BunnyOutline" type="Polygon2D" parent="."]
color = Color(0, 0, 0, 0.5)
polygon = PackedVector2Array(-205, -110, -206, -124, -205, -138, -202, -149, -195, -158, -184, -165, -173, -167, -162, -166, -154, -163, -147, -159, -141, -154, -137, -147, -134, -138, -123, -138, -120, -147, -115, -155, -108, -160, -99, -164, -89, -165, -79, -164, -71, -160, -65, -156, -59, -150, -56, -141, -55, -130, -54, -109, -53, -105, -45, -96, -40, -84, -39, -73, -40, -61, -42, -48, -49, -25, -56, -15, -43, 3, -38, 9, -34.8029, 11.3978, -34, 13, -34, 16, -36, 21, -38, 25, -47, 34, -51, 38, -52, 40, -52, 42, -51, 48, -50, 54, -47, 61, -45.8861, 70.7338, -47, 78, -50, 87, -57, 95, -64, 101, -73, 102, -85, 99, -97, 95, -108, 89, -118, 84, -125, 83, -134, 83, -144, 87, -161, 95, -179, 101, -192, 101, -200, 97, -213, 82, -216, 70, -215, 52, -211, 40, -206, 31, -216, 29, -220, 26, -223.789, 20.4228, -225, 15, -225, 11, -221, 5, -214, -2, -207, -9, -199, -14, -209, -25, -216, -43, -220, -68, -217, -84, -213, -97)
uv = PackedVector2Array(-205, -110, -206, -124, -205, -138, -202, -149, -195, -158, -184, -165, -173, -167, -162, -166, -154, -163, -147, -159, -141, -154, -137, -147, -134, -138, -123, -138, -120, -147, -115, -155, -108, -160, -99, -164, -89, -165, -79, -164, -71, -160, -65, -156, -59, -150, -56, -141, -55, -130, -54, -109, -53, -105, -45, -96, -40, -84, -39, -73, -40, -61, -42, -48, -49, -25, -56, -15, -43, 3, -38, 9, -34.8029, 11.3978, -34, 13, -34, 16, -36, 21, -38, 25, -47, 34, -51, 38, -52, 40, -52, 42, -51, 48, -50, 54, -47, 61, -45.8861, 70.7338, -47, 78, -50, 87, -57, 95, -64, 101, -73, 102, -85, 99, -97, 95, -108, 89, -118, 84, -125, 83, -134, 83, -144, 87, -161, 95, -179, 101, -192, 101, -200, 97, -213, 82, -216, 70, -215, 52, -211, 40, -206, 31, -216, 29, -220, 26, -223.789, 20.4228, -225, 15, -225, 11, -221, 5, -214, -2, -207, -9, -199, -14, -209, -25, -216, -43, -220, -68, -217, -84, -213, -97)

[node name="Area2D" type="Area2D" parent="BunnyOutline"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BunnyOutline/Area2D"]
position = Vector2(-130, -30)
shape = SubResource("CapsuleShape2D_rf54f")

[node name="BearOutline" type="Polygon2D" parent="."]
position = Vector2(260, 0)
color = Color(0, 0, 0, 0.5)
polygon = PackedVector2Array(-210, -101, -212, -108, -212, -121, -207, -133, -201, -141, -193, -147, -181, -150, -172, -150, -162, -148, -154, -145, -148, -141, -143, -136, -117, -135, -114, -139, -108, -143, -103, -145, -97, -146, -91, -146, -84, -146, -76, -145, -70, -141, -64, -137, -60, -133, -57, -129, -54, -123, -53, -117, -53, -110, -54, -104, -47, -97, -43, -91, -40, -84, -39, -73, -40, -61, -42, -48, -49, -25, -56, -15, -38, 6, -34, 10, -33, 17, -38, 26, -50, 37, -45, 78, -50, 87, -57, 95, -67, 102, -93, 99, -114, 87, -124, 83, -134, 83, -144, 87, -161, 95, -179, 101, -192, 101, -200, 97, -213, 83, -219, 69, -218, 57, -207, 31, -220, 28, -226, 16, -226, 8, -207, -11, -199, -14, -209, -25, -216, -43, -220, -68, -217, -84, -213, -97)
uv = PackedVector2Array(-205, -110, -207, -124, -207, -138, -204, -148, -196, -159, -185, -167, -174, -168, -164, -167, -155, -164, -147, -160, -141, -154, -136, -147, -134, -138, -123, -138, -120, -147, -115, -155, -108, -160, -99, -164, -89, -165, -79, -164, -71, -160, -65, -156, -59, -150, -55, -142, -53, -106)

[node name="Area2D" type="Area2D" parent="BearOutline"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BearOutline/Area2D"]
position = Vector2(-130, -30)
shape = SubResource("CapsuleShape2D_rf54f")

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="input_event" from="BunnyOutline/Area2D" to="." method="_on_bunny_area_2d_input_event"]
[connection signal="mouse_entered" from="BunnyOutline/Area2D" to="." method="_on_bunny_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="BunnyOutline/Area2D" to="." method="_on_bunny_area_2d_mouse_exited"]
[connection signal="input_event" from="BearOutline/Area2D" to="." method="_on_bear_area_2d_input_event"]
[connection signal="mouse_entered" from="BearOutline/Area2D" to="." method="_on_bear_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="BearOutline/Area2D" to="." method="_on_bear_area_2d_mouse_exited"]
